; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-properties.c_obs_property_list_clear.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-properties.c_obs_property_list_clear.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.list_data = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @obs_property_list_clear(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.list_data*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call %struct.list_data* @get_list_data(i32* %4)
  store %struct.list_data* %5, %struct.list_data** %3, align 8
  %6 = load %struct.list_data*, %struct.list_data** %3, align 8
  %7 = icmp ne %struct.list_data* %6, null
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load %struct.list_data*, %struct.list_data** %3, align 8
  %10 = call i32 @list_data_free(%struct.list_data* %9)
  br label %11

11:                                               ; preds = %8, %1
  ret void
}

declare dso_local %struct.list_data* @get_list_data(i32*) #1

declare dso_local i32 @list_data_free(%struct.list_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
